# ChangeLog for sys-fs/loop-aes
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.100 2014/01/14 13:58:46 ago Exp $

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.7a.ebuild:
  Stable for x86, wrt bug #495954

  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> loop-aes-3.7a.ebuild:
  amd64 stable, bug #495954

  05 Jan 2014; Markus Meier <maekke@gentoo.org> loop-aes-3.7a.ebuild:
  arm stable, bug #495954

*loop-aes-3.7a (15 Oct 2013)

  15 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> +loop-aes-3.7a.ebuild:
  Version bump

*loop-aes-3.6i (10 Aug 2013)

  10 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> +loop-aes-3.6i.ebuild:
  Version bump

  04 Jul 2013; Alon Bar-Lev <alonbl@gentoo.org> -loop-aes-3.6b-r1.ebuild,
  -loop-aes-3.6b.ebuild, -loop-aes-3.6c.ebuild, -loop-aes-3.6d.ebuild,
  -loop-aes-3.6e.ebuild:
  remove old packages

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for x86, wrt bug #469380

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for arm, wrt bug #469380

  09 Jun 2013; Chema Alonso <nimiux@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for amd64 wrt bug #469380

*loop-aes-3.6h (10 May 2013)

  10 May 2013; Alon Bar-Lev <alonbl@gentoo.org> +loop-aes-3.6h.ebuild:
  Version bump, bug#469306

  12 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> metadata.xml:
  Remove c1pher as a maintainer

  12 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6g.ebuild:
  Add loop-aes-losetup note

  04 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6g.ebuild:
  Optionally depend on app-crypt/loop-aes-losetup, bug#390657

  22 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6e.ebuild:
  Fix location of linux-mod_pkg_setup

  20 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6e.ebuild:
  Check for CONFIG_MODULES, per bug#447948, thanks to Agostino Sarubbo
