@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install postinst postrm preinst prepare setup
 DEPEND=|| ( >=sys-apps/util-linux-2.12r[crypt,loop-aes] app-crypt/loop-aes-losetup ) kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources )
 DESCRIPTION=Linux kernel module to encrypt local file systems and disk partitions with AES cipher.
-EAPI=3
+EAPI=5
 HOMEPAGE=http://loop-aes.sourceforge.net/loop-AES.README
 IUSE=aes-ni extra-ciphers keyscrub padlock kernel_linux
-KEYWORDS=amd64 arm ~hppa ~ppc ~sparc x86
+KEYWORDS=~amd64 ~arm ~hppa ~ppc ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=kernel_linux? ( virtual/modutils )
 SLOT=0
-SRC_URI=mirror://sourceforge/loop-aes/loop-AES-v3.6g.tar.bz2
+SRC_URI=mirror://sourceforge/loop-aes/loop-AES-v3.7b.tar.bz2
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	linux-info	90944ede7e9761bd7ef07602acdef9e3	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=4911cdf180aee42e8e7e252e2b498535
+_md5_=38acba43a8480bde114644019f7e7c8c
