@@ -1,30 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST loop-AES-v3.6g.tar.bz2 331560 SHA256 228ca27c386af0099be059a91510fb6bf8de3bd5daed7a1f350ce65a784f279e SHA512 df214e57ecfdcac2f77319d5dd3d67a8a7ceaa977f1f3fa07e6f77a1dc2dcb30f4cceacefcdb904b06579bc3ba9b222927e666de1d70ad6c793c085c3c477357 WHIRLPOOL f2d5c6fecd64c3ffdf8f2271a8108180bf337bca6ee9c886083f5b717ff4313c16e1dd29f979f3d8904355ae653d81ae78f6dda58544314df5f7b641adcacc72
-DIST loop-AES-v3.6h.tar.bz2 332717 SHA256 a8258e0eb284e38dd522dcf98ec4ca492737de1406e541926783f0342f405ee5 SHA512 7f1d80d0ab8b72ac1d8fd56037aa0de6535ef9066ce731e4e12e462708a2707462e52a4a5cb5f45525d96a9671da5d2b947d192e30a68ae3f7aacc398e3d1023 WHIRLPOOL f6a3b3d521d44b2a66f8bd453c60d2c01324b41c8c952a3ef6ce46923b3f95f3bf06ced903a80e597d5eef152663b67256caa75b47fd4013a7113b725a9ec812
-DIST loop-AES-v3.6i.tar.bz2 332955 SHA256 aee1f0b376085eceae3521078caddb74ed7954c152e7307b157eafea817b3afa SHA512 a1d7f3aa4592a3f522a30027e65b7af96619f8041863b4c5158345463e866509c5f7cc76abb0b76bccb5c0b40f1645d7daf477a0b7bb1b787b95418bfbe52abe WHIRLPOOL bd13e84663912d61a151ddab619d0ae214c5da98b98a3ae6c1cf3f57c757288e4d870912796d43add1c84ca74cf1b929b2b3739901cd7f97e4e8ae6b2b693f8d
 DIST loop-AES-v3.7a.tar.bz2 333520 SHA256 9f0ac940ba478c9f47592450a6788d4b15bfb4e90e1f05ba32c36cbf46074d36 SHA512 b07c5b16bb68dc2fc2a72de06f9e37f5f3ab1169a931d4564090c8e0ed958b18157c8f76a41dc560539558ab9bd9dd2e7aea7b451a9311257cd463d8718c12a9 WHIRLPOOL c5fc77dfbafb7dfe751883c7855b38360997e8f54349355f9a9842caddbcbb8e969fb6f85434c9990abe4c641062e5d1b73ca1f09fee2761c2fd370fa610832d
-EBUILD loop-aes-3.6g.ebuild 2322 SHA256 27c8fe94216420cad750efff06360b31c6906ea1ceadc300731239ad64b3f157 SHA512 d82e8f33cbdba4162c0b29552f3197a51a408bd8ca24c0c369e886a47298ca0142521afa7e6ea2678f2d3df1d8627605dbc245f8950a87b79350e95241e9cb81 WHIRLPOOL f8e5f8a2ec4c4cd9531ea1eff1b46fb30108826ca28000b78109a1d2a35cc3bc961237d4098207a3826d9381f57fbf13b30dccd91505d78adaa4ee6284af150a
-EBUILD loop-aes-3.6h.ebuild 2328 SHA256 4ab0160fe47dd5b03fcd07b4237a6412db1cdf28435dbc36ee136c9859591f46 SHA512 345446c30e4bb44ddc971839a8faf97fde86a20a7af7c763e2d43ff9832043449df51823c3c9d457f9a3c59e65367049a6648b9be96d60336fe157cd6965e54c WHIRLPOOL 0f3d0b0e21e9a9fcd85aeb12d5eea2190169e66a846b86149e246a474c143149ea5dfbdd7bb94596ac24b99cfef447043c872bf9b96f7c253a870ab215a6b596
-EBUILD loop-aes-3.6i.ebuild 2328 SHA256 917a361dea989749d692ca59efd6f0d77d65f43d63baf3f8c78d9169cb524c55 SHA512 e6ed5a31d3a61c47d84a0bf74ec2555ddcae2b51753134184f621700a69e9830f1f7c2c0ce62666f5d409ecadfc1b91d92775a4b2848c3b9f3cc950e7bb82772 WHIRLPOOL 45da23803ede09a1fab464f75b2f0dabb977f385e41ea31cb692af4421643df436f867e5f431f803f52649f889bc56ae72d34f88081ffc817be3ff3305e600aa
+DIST loop-AES-v3.7b.tar.bz2 334227 SHA256 b6794ca655c8a0b9ac47814264d96d7dab588493e3d2c09357eaad1e3436d648 SHA512 f673d8ccb9b3072256ff3501785204f1d64af5211eabaf47b5d3dc6c42e3d7ad6a2e4bcddcad76ee903637097a8aa4e1df9e16fff345af2ecd6e105b32bf35d3 WHIRLPOOL 1d4aeda49fbdfb404d8377bb87572a8a2cf18859917188916c00951829b834c9ec475615adf6f587a4bdda63888fdbee8f91ae0161c1ecba755488292a4d72df
 EBUILD loop-aes-3.7a.ebuild 2322 SHA256 abe6fad9639c8b0beb71b382a82b7968abd24e5c03dbe89a060012a8f4617d4b SHA512 d7ec0a2b69088dc92865af5f994bedf0c27534980ef9d32be7adb5e54cd121620c052c03fb2a47bd34f29f8091a96bc86d98745fd340c47ee95349b92a174db4 WHIRLPOOL 33341e786da5124d34023cd9c6391132ca10d99416efcc52808de55b4291c9cd2a9af5add929a3a29f8fe3a3ebe189ffbae735f67af7494da3d04ba176bd2b6e
-MISC ChangeLog 13321 SHA256 e5c79fe17d37703b6435dbd317522bf7f1deb129e12136baa46a9935a9d1c0c8 SHA512 b67df3df6efd5d31973b541378aa2f10f67054276137579ad6cd416e7502f4634ca017d50d09be9ba21ba59890a2df4eb6550ad5d4d5b4096c2e897ef4be45a4 WHIRLPOOL c0df1c640e8b34555f53aacea76998aa3a98d2480707142729dc3c790dd2826cebe961a4d04e7c9d081873574a49f93aeffb55ae2be38f6945332350394402d4
+EBUILD loop-aes-3.7b.ebuild 2262 SHA256 bf8e26bbfbf8b0d287420ef85443b3a9d22e0ca1abe35ea3efb7ddf2890dd754 SHA512 43dcbc55705f644428a836082c392fc5c05d0596e6be9aaeb3bcf6446eaa6ff301363ae3c501acac3ddd0069bf6ad548e96a9935fa3e73a71f191d369bf42556 WHIRLPOOL e0144e9d9efb075cfedfa042e82888b90f0a276f07f720ea34f81707516313af31c8f0c85b7e9b90a91fbbd5ae2037a4d3a2d9a2ece87388573e222f5f1d7dd7
+MISC ChangeLog 13593 SHA256 5f063f1175f5c51cb77f5204261a28d8b30a0d918b8f588b06886a87d71f2365 SHA512 f750798169a684c571b39dfb0d15ec8e2ad545919b6c087da75c57bf0d1fc49655d549f938c58064ee1214d0dd4ce62718e1eb185b77b441286fdc0b076a7486 WHIRLPOOL b3ced318a951fc8fc914cdf3f2175ce66119074d2c5fa9039b2a931c6d8b9c310f49177de03b3c53af3939d15efad176074c6bb11917794d82a7a0e838e6b3f6
 MISC metadata.xml 540 SHA256 1b058e97fb2f2c4831739d470938c878090d511fb223102107eb86b9819a7b8c SHA512 201393015c486283648b6afea4bae36cbee26d01558fbd8dfc9a01aa2a8462b44cd1ffd41afb7a624ef2cd6258fa9def88b209227fae94b3d65e352c0199e1d4 WHIRLPOOL 9ecad49145121b89c68eb1882c689ae909ec4fcb56098570691f0f54f7d2102a932a2399240e628f4e17461a24ec81b9a1b42d097fb8118f8e4b05af7388c831
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS1UKXAAoJELp701BxlEWfnZAQAJnGbOHr+h3sn0OoaxueLaIw
-CV6XHiSIOOVOstxnHslQA9jWxuGsllpfyiMecyWfoMFhKHuhNA/eiCNKSf3Lo5ri
-7GT1PtCuLh+hEKEePOI6gPRLvG5xA+mL5Vjqu22+BieAwxZdcAh4vgWmVHeyunPd
-ZccD36Iy8+Syv/QNXQO7gk1ksCzOmvlK9DrL7W/74VBn3JGFJcRwWbJnOXcImp0Q
-i1bQLgzuPYRWFPKmT4N1TTYW3hj/XpbrshWKhzyl1vcouVVRmQgYLnEpaREjybbs
-FEQcuBbrl0uF2vG4hNJl3IlarQXrQzw1Wc2wMsu1SZsHwoIKCODAHgZYD4doZM/7
-3QYSNXcjDwxcsLVsamWYNu74AISvgX3OZsS1poLaXuobywUdIt/IvVpDTUZDoavu
-oTHJJNvH5KrIbFBUnOc5KHn4xegaQlrYLAZp+7M/Wblyt3O+APub/6WV2doDe/0K
-3VLlbAvU4obrXnimT9dPfZk3hMzFM8qSBqV8S22lH/SrWjeYzMTvSx3ePDh71CVL
-1Q5WqNnOEQIeOEaAEETX+XO5EL3MeSfpVmJaS59U6KfTuRrKD/UzJ4C5FiCioGOa
-vpsjmvZFSdfd2gxVBOxj58kaDyifBJvUkLqDcfCJ/+vJREbdQKzp092cXiaMuyLF
-dPxyE++MS2LBEplv85NY
-=VQg8
+iF4EAREIAAYFAlNNlUsACgkQXYk9GL8g3FGDjgD/VTqbW4q7lHyOacQtTe+Cfk83
+cxhNY6WgAQ++4fvnMP4A/1urJJvCrzWaE5DtrBHGHN0XEgnxZWQjq58xSp6txknr
+=Zv/w
 -----END PGP SIGNATURE-----
